--- a/debian/control
+++ b/debian/control
@@ -1,22 +1,24 @@
 Source: mingw-w64-libunistring
 Priority: optional
 Maintainer: Tobias Schlemmer <keinstein@users.berlios.de>
-Build-Depends: debhelper (>= 9), autotools-dev
-Standards-Version: 3.9.8
+Build-Depends: debhelper (>= 9), autotools-dev,
+	       gcc-mingw-w64, g++-mingw-w64 (>= 1.7.1),
+	       gperf
+Standards-Version: 4.1.1
 Section: libs
-Homepage: <insert the upstream URL, if relevant>
+Homepage: http://www.gnu.org/software/libunistring/
 #Vcs-Git: https://anonscm.debian.org/collab-maint/mingw-w64-libunistring.git
 #Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/mingw-w64-libunistring.git
 
-Package: mingw-w64-libunistring-dev
+Package: libunistring-mingw-w64-dev
 Section: libdevel
 Architecture: any
-Depends: mingw-w64-libunistringBROKEN (= ${binary:Version}), ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Depends: libunistring1-mingw-w64 (= ${binary:Version}), ${misc:Depends}
+Description: Library for manipulating Unicode strings and C strings. (mingw-w64 developemnt)
+ This package contains the deveopment files
 
-Package: mingw-w64-libunistringBROKEN
+Package: libunistring1-mingw-w64
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: Library for manipulating Unicode strings and C strings. (mingw-w64 runtime)
+ This package contains the runtime files.
