--- a/debian/rules
+++ b/debian/rules
@@ -67,7 +67,8 @@ override_dh_auto_configure:
 		pushd build-$$target && \
 		$(EXECUTE) /usr/bin/prepare-winedllpath && \
 		$(EXECUTE) ../configure --prefix=/usr/$$target/ \
-				--build=$$target --host=$$target && \
+				--build=$$target --host=$$target \
+				--enable-threads=win32 && \
 		popd || exit 1 ; \
 	done
 
